# ViewSelectionTool

./: CMakeLists.txt  run.sh
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gles2.h
include/: buffer.h  common.h  kernel.cuh  node.h  octree.h  ray.h
include/geometry/: cube.h  myoctree.h
include/graphic/: window.h
include/loader/: depth.h  image.h  intrinsic.h  pose.h
include/shader/: program.h  shader.h
shader/: simple.fs  simple.vs
src/: common.cpp  draw.cpp  input.cpp  main.cpp  main.cu  window.cpp
src/geometry/: cube.cpp  myoctree.cpp
src/loader/: image.h  intrinsic.h  pose.h
src/shader/: program.cpp  shader.cpp
